<resources>
    <string name="app_name">Capture The Moment</string>

    <!-- User module UI -->
    <string name="user_email_hint">Email</string>
    <string name="user_password_hint">Password</string>
    <string name="user_confirm_password_hint">Confirm Password</string>
    <string name="user_login_button">Login</string>
    <string name="user_forgot_password_label">Forgot your login details?</string>
    <string name="user_forgot_password_help">Click for help</string>
    <string name="user_mobile_login_label">Login using mobile</string>
    <string name="user_signup_question">Don\'t have an account?</string>
    <string name="user_signup_solution">Sign up.</string>
    <string name="user_mobile_hint">Mobile Number</string>
    <string name="user_otp_hint">OTP</string>
    <string name="user_done_button">Done</string>
    <string name="user_profile_name_hint">Full name</string>
    <string name="user_profile_age_hint">Age</string>
    <string name="user_profile_mobile_hint">Mobile</string>
    <string name="user_profile_email_hint">Email</string>
    <string name="user_profile_location_hint">Location</string>
    <string name="user_profile_owned_books_label">Owned books</string>
    <string name="user_profile_shared_books_label">Shared books</string>
    <string name="user_profile_edit_button">Edit</string>
    <string name="user_signup_phone_tab">Phone</string>
    <string name="user_signup_email_tab">Email</string>
    <string name="user_login_question">Already have an account?</string>
    <string name="user_login_solution">Log In.</string>
    <string name="user_profile_name_label">Name</string>
    <string name="user_profile_about_label">About</string>
    <string name="user_profile_email_label">Mobile number</string>
    <string name="user_profile_mobile_label">Email ID</string>
    <string name="user_profile_location_label">Location</string>

    <!-- Book module -->
    <string name="book_self_username_dialog_title">Own username</string>
    <string name="book_self_username_dialog_message">You cannot give your own username as secondary owner since you are the primary owner. This will be removed.</string>
    <string name="book_self_username_dialog_neutral_button">Remove</string>
    <string name="book_updated_now">Now</string>
    <string name="book_updated_minute">Minute ago</string>
    <string name="book_updated_minutes">Minutes ago</string>
    <string name="book_updated_hour">Hour ago</string>
    <string name="book_updated_hours">Hours ago</string>
    <string name="book_updated_day">Day ago</string>
    <string name="book_updated_days">Days ago</string>
    <string name="book_updated_week">Week ago</string>
    <string name="book_updated_weeks">Weeks ago</string>
    <string name="book_updated_month">Month ago</string>
    <string name="book_updated_months">Months ago</string>
    <string name="book_updated_year">Year ago</string>
    <string name="book_updated_years">Years ago</string>
    <string name="book_add_name_hint">Book name</string>
    <string name="book_add_primary_owner_label">You are the primary owner of the book.</string>
    <string name="book_add_share_book_label">You can share it with others below by entering their registered email or mobile.</string>
    <string name="book_add_create_button">Create</string>
    <string name="book_add_sec_owner_hint">Username</string>
    <string name="book_add_can_edit_label">Can Edit</string>

    <!-- Card module -->
    <string name="card_add_description_hint">A few words about the moment</string>
    <string name="card_add_back_button">Back</string>
    <string name="card_add_create_button">Save</string>
    <string name="card_add_next_button">Next</string>
    <string name="card_delete_dialog_title">Do you want to delete the card?</string>
    <string name="card_delete_dialog_message">Once deleted, the card will be removed permanently. You cannot undo the action.</string>
    <string name="card_delete_dialog_pos_button">Delete</string>
    <string name="card_delete_dialog_neg_button">Cancel</string>

    <!-- Settings module -->
    <string name="settings_notification_label">Notifications</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_activity_label">Activity</string>
    <string name="settings_aboutus_label">About us</string>
    <string name="settings_signout_label">Signout</string>
    <string name="settings_datasync_label">Data Refresh</string>
    <string name="theme_change_key">appTheme</string>
    <string name="datasync_interval_change_key">appInterval</string>
    <string name="theme_change_value_orange">Nostalgic Orange</string>
    <string name="theme_change_value_blue">Tranquil Blue</string>
    <string name="datasync_interval_30min">30 Mniutes</string>
    <string name="datasync_interval_1hr">1 Hour</string>
    <string name="datasync_interval_12hrs">12 Hours</string>
    <string name="datasync_interval_24hrs">24 Hours</string>
    <string-array name="settings_datasync_intervals">
        <item>@string/datasync_interval_30min</item>
        <item>@string/datasync_interval_1hr</item>
        <item>@string/datasync_interval_12hrs</item>
        <item>@string/datasync_interval_24hrs</item>
    </string-array>


    <!-- Misc -->
    <string name="choose_picture_gallery">Pick photo</string>
    <string name="choose_picture_camera">Take photo</string>
    <string name="data_loading_from_network">Loading...</string>
    <string name="theme_selection_sample_text_label">Sample Color</string>

    <string name="google_places_api_key">AIzaSyDuFengFnx9qwNfb8uas01UUQFtwuFb_zw</string>

</resources>
