<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorMainBackground">


    <EditText
        android:id="@+id/frag_add_card_details_et_desc"
        style="@style/AppEditText"
        android:background="@drawable/background_multiline_edittext"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/card_add_description_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/AppEditTextImageView"
        android:id="@+id/frag_add_card_details_iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_card_details_et_desc"
        app:srcCompat="@drawable/location_pin" />

    <ImageView
        style="@style/AppEditTextImageView"
        android:id="@+id/frag_add_card_details_iv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_card_details_iv_location"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_card_details_iv_date"
        app:srcCompat="@drawable/calendar" />

    <EditText
        android:id="@+id/frag_add_card_details_et_location"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/user_profile_location_hint"
        app:layout_constraintBottom_toBottomOf="@+id/frag_add_card_details_iv_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frag_add_card_details_iv_location"
        app:layout_constraintTop_toTopOf="@+id/frag_add_card_details_iv_location"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/frag_add_card_details_tv_date"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="Moment date"
        app:layout_constraintBottom_toBottomOf="@+id/frag_add_card_details_iv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frag_add_card_details_iv_date"
        app:layout_constraintTop_toTopOf="@+id/frag_add_card_details_iv_date" />

    <Button
        style="@style/AppButton"
        android:id="@+id/frag_add_card_details_bt_create"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="enterMoreDetails"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/card_add_create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        style="@style/AppButton"
        android:id="@+id/frag_add_card_details_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="enterMoreDetails"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/card_add_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>